changed age to 14 and fixed about me photo alignment

--- a/dark/assets/css/styles.css
+++ b/dark/assets/css/styles.css
@@ -864,7 +864,7 @@ html {
 .about-img {
     position: relative;
     left: 200px;
-    top: 100px;
+    top: 150px;
     border-radius: 20px;
 }
 
